tests/fixtures/type_errors/builtin_sha256_type.airl
;; ERROR: type mismatch
;; sha256 expects String, not Int
(sha256 42)
